--- a/paper.Rmd
+++ b/paper.Rmd
@@ -1,6 +1,10 @@
 ---
 title: "paper"
-output: word_document
+output: 
+  html_document:
+    toc: true
+    toc_float: true
+    highlight: tango
 ---
 
 ```{r setup, include=FALSE}
@@ -29,4 +33,3 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
 
 
 
-# Muito burra
